@@ -1,5 +1,10 @@
 2007-02-17  Vitaly Alexeev <tishka92@yahoo.com>
 
+	* gameswf/gameswf_test_ogl: added SDL_VIDEORESIZE event handler
+	* gameswf/gameswf_impl.cpp: a bit cleanup
+
+2007-02-17  Vitaly Alexeev <tishka92@yahoo.com>
+
 	* gameswf/gameswf_button.cpp: protect character from deleting
 	during execution of event handler
 	* gameswf/gameswf_test_ogl: added digits to key_event()
